[gd_scene load_steps=3 format=3 uid="uid://cgua2elp0w25e"]

[ext_resource type="Script" uid="uid://c7hyk05pjllqk" path="res://area_2d.gd" id="2_ycnvd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m066l"]
size = Vector2(9.13, 5.02)

[node name="Node2D" type="Node2D"]
position = Vector2(5, 1)

[node name="ColorPicker" type="ColorPicker" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 1.0
offset_top = 169.0
offset_right = 265.0
offset_bottom = 441.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
edit_alpha = false
picker_shape = 1
can_add_swatches = false
sampler_visible = false
color_modes_visible = false
sliders_visible = false
hex_visible = false
presets_visible = false
metadata/_edit_use_anchors_ = true

[node name="ColorPicker2" type="ColorPicker" parent="."]
offset_left = 2.0
offset_right = 266.0
offset_bottom = 272.0
scale = Vector2(0.5, 0.5)
picker_shape = 1
can_add_swatches = false
sampler_visible = false
color_modes_visible = false
sliders_visible = false
hex_visible = false
presets_visible = false
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
offset_left = 2.0
offset_top = 135.0
offset_right = 137.0
offset_bottom = 158.0
text = "TROCAR COR FILL"
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="."]
offset_left = 2.0
offset_top = 301.0
offset_right = 174.0
offset_bottom = 324.0
text = "TROCAR COR ARESTAS"
metadata/_edit_use_anchors_ = true

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("2_ycnvd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(695, 252)
scale = Vector2(100, 100)
shape = SubResource("RectangleShape2D_m066l")

[node name="ReferenceRect" type="ReferenceRect" parent="."]
show_behind_parent = true
light_mask = 0
z_index = -1
offset_left = 238.0
offset_right = 1152.0
offset_bottom = 504.0
mouse_filter = 2
editor_only = false

[node name="Button" type="Button" parent="."]
offset_top = 338.0
offset_right = 215.0
offset_bottom = 393.0
action_mode = 0
text = "Criar Pol√≠gono"
metadata/_edit_use_anchors_ = true

[node name="OptionButton" type="OptionButton" parent="."]
offset_left = 2.0
offset_top = 406.0
offset_right = 216.0
offset_bottom = 426.0

[node name="Fillpoly" type="Button" parent="."]
offset_left = 3.0
offset_top = 436.0
offset_right = 216.0
offset_bottom = 467.0
text = "FillPoly"

[node name="RemoverPoly" type="Button" parent="."]
offset_left = 4.0
offset_top = 478.0
offset_right = 216.0
offset_bottom = 509.0
text = "Remover Poligono"

[connection signal="color_changed" from="ColorPicker" to="Area2D" method="_on_color_picker_color_changed"]
[connection signal="color_changed" from="ColorPicker2" to="Area2D" method="_on_color_picker_2_color_changed"]
[connection signal="mouse_entered" from="Area2D" to="Area2D" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="Area2D" method="_on_mouse_exited"]
[connection signal="pressed" from="Button" to="Area2D" method="_on_button_pressed"]
[connection signal="pressed" from="Fillpoly" to="Area2D" method="_on_fillpoly_pressed"]
[connection signal="pressed" from="RemoverPoly" to="Area2D" method="_on_remover_poly_pressed"]
